@@ -96,6 +96,7 @@ extraResourceOptions=
 14=toolbar.c
 15=prb.c
 16=taskbar.c
+17=tray.c
 [Header]
 1=main.h
 2=resource.h
@@ -104,18 +105,20 @@ extraResourceOptions=
 1=ultradefrag.rc
 [Other]
 [History]
-shutdown.c,12981
-i18n.c,8346
-vollist.c,8276
-main.c,18366
-job.c,3551
-main.h,5243
-about.c,1137
-map.c,10071
-resource.h,1796
-statbar.c,3888
-menu.c,0
-upgrade.c,5601
+settings.c,14168
+ultradefrag.rc,1897
 toolbar.c,3274
-ultradefrag.rc,1712
-settings.c,966
+upgrade.c,5601
+menu.c,0
+statbar.c,4523
+resource.h,1612
+map.c,10071
+about.c,1137
+main.h,6621
+job.c,10436
+vollist.c,16857
+i18n.c,10091
+shutdown.c,960
+taskbar.c,2527
+tray.c,3437
+main.c,13973
